# arxiv_summarization

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  cloudbuild.yaml  conftest.py  handler.py  main.py  pyproject.toml  requirements-test.txt  test_handler.py  test_integration.py  test_main.py  test_main_local.py
.github/workflows/: deploy.yml
src/arxiv_slack_bot/: __init__.py  handler.py  main.py  models.py
tests/: __init__.py  test_handler.py
