[project]
name = "arxiv-summarization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "openai>=1.75.0",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "slack-sdk>=3.35.0",
    "uvicorn>=0.34.2",
]
